<resources>
    <string name="app_name">My Application</string>
    <string name="register_user">Register User</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="logout">Logout</string>
    <string name="admin">Admin?</string>
    <string name="current_orders">Current Orders</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="admin_tools">Admin Tools</string>
    <string name="shopstris">Shopstris</string>
    <string name="test">test</string>
    <string name="cart_name">Cart Name</string>
    <string name="create_order">Create Order</string>
    <string name="order_name">Order Name</string>
    <string name="your_cart">Your cart</string>
    <string name="item_to_add_to_cart">Item to add to cart</string>
    <string name="add">Add</string>
    <string name="purchase">Purchase</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="stock_item">Stock Item</string>
    <string name="remove_item">Remove Item</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="item_description">Item Description</string>
    <string name="add_item">Add Item</string>
    <string name="item_to_remove">Item to remove</string>
    <string name="delete_item">Delete Item</string>
    <string name="back_arrow"><![CDATA[<]]></string>
</resources>