<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StockItem">

    <TextView
        android:id="@+id/StockItemTextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#808080"
        android:text="@string/stock_item"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/ProductNameEditText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/StockItemTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:inputType="text"
        android:hint="@string/product_name"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/PriceEditText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/ProductNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:inputType="numberDecimal"
        android:hint="@string/price"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/DescriptionEditText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/PriceEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:inputType="text"
        android:hint="@string/item_description"
        android:gravity="center"
        />

    <Button
        android:id="@+id/ConfirmStockItemButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/DescriptionEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add_item"
        android:textSize="30sp" />


</androidx.constraintlayout.widget.ConstraintLayout>