<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminTools">

    <TextView
        android:id="@+id/adminSettings"
        android:text="@string/admin_settings"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="50sp"
        android:background="#808080"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/StockItemButton"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/adminSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/removeItemButton"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="150dp"
        android:text="@string/stock_item"
        android:textSize="40sp"
        />
    
    <Button
        android:id="@+id/removeItemButton"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/StockItemButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="125dp"
        android:textSize="40sp"
        android:text="@string/remove_item" />

    <Button
        android:id="@+id/adminToolsBackButton"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:text="@string/back_arrow"
        android:textSize="30sp"
        />


  </androidx.constraintlayout.widget.ConstraintLayout>