<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUser">

    <EditText
        android:id="@+id/user_name"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="216dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:hint="@string/user_name"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="275dp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:text="@string/register"/>


</androidx.constraintlayout.widget.ConstraintLayout>