<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartItems"
    android:background="#aec6cf">

    <ListView
        android:id="@+id/itemsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@id/availableItemsListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="200dp"/>
    <ListView
        android:id="@+id/availableItemsListView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/itemsListView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/yourCart"
        android:layout_width="match_parent"
        android:background="#808080"
        android:textColor="@color/black"
        android:layout_height="40sp"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/availableItemsListView"
        app:layout_constraintBottom_toTopOf="@id/itemsListView"
        android:text="@string/your_cart" />
    <TextView
        android:id="@+id/ShoppingCartUserName"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintBottom_toTopOf="@id/availableItemsListView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/black"
        tools:text="Test"
        android:background="#808080" />
    <EditText
        android:layout_width="180sp"
        android:id="@+id/itemAddEditText"
        android:layout_height="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemsListView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="30sp"
        android:hint="@string/item_to_add_to_cart"
        android:inputType="text"
        android:gravity="center"
        android:layout_marginBottom="60sp"/>
    <Button
        android:id="@+id/addItemButton"
        android:layout_width="100sp"
        android:layout_height="50sp"
        app:layout_constraintStart_toEndOf="@id/itemAddEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemsListView"
        app:cornerRadius ="30dp"
        android:layout_marginBottom="60sp"
        android:text="@string/add" />
    <Button
        android:id="@+id/purchaseCartButton"
        android:layout_width="200sp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/itemAddEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/purchase"
        android:textSize="25sp" />

    <Button
        android:id="@+id/itemsBackButton"
        android:layout_width="60dp"
        android:text="@string/back_arrow"
        android:textSize="20sp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/purchaseCartButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>