<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RemoveItems">

    <TextView
        android:id="@+id/removeItemTextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#808080"
        android:text="@string/remove_item"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ListView
        android:id="@+id/removeItemListView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/removeItemTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="300dp"
        />


    <EditText
        android:id="@+id/removeItemEditText"
        android:layout_width="200dp"
        android:inputType="text"
        android:hint="@string/item_to_remove"
        android:gravity="center"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/removeItemListView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deleteItemButton"
        android:layout_marginStart="25dp"
        />

    <Button
        android:id="@+id/deleteItemButton"
        android:layout_width="125dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@id/removeItemEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/removeItemListView"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/delete_item" />


</androidx.constraintlayout.widget.ConstraintLayout>